--- a/package.json
+++ b/package.json
@@ -9,19 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/forms": "^0.5.10",
+    "@types/leaflet": "^1.9.17",
+    "@types/lodash": "^4.17.16",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
+    "framer-motion": "^12.10.1",
+    "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
+    "next": "15.3.2",
+    "openai": "^4.97.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "react-hot-toast": "^2.5.2",
+    "react-image-crop": "^11.0.10",
+    "react-leaflet": "^4.2.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
