--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@types/lodash": "^4.17.16",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.10.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "openai": "^4.97.0",
     "plotly.js": "^3.0.1",
     "react": "^18.3.1",
